# USB-Thing

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  armenv.sh  version.py
bootloader/: CMakeLists.txt  LICENSE.md  README.md  concat.sh  makefile
bootloader/include/: autobaud.h  boot.h  bootld.h  bootldio.h  cdc.h  config.h  crc.h  descriptors.h  flash.h  ramfuncs.h  retargetdebug.h  usbconfig.h  xmodem.h
bootloader/source/: autobaud.c  boot.c  bootldio.c  cdc.c  crc.c  flash.c  loader.c  main.c  retargetdebug.c  xmodem.c
common/: common.cmake
common/include/: persistence.h  platform.h  protocol.h
firmware/: CMakeLists.txt  LICENSE.md  README.md
firmware/include/: callbacks.h  dac.h  descriptors.h  gpio.h  handlers.h  i2c.h  platform.h  pwm.h  spi.h  usbconfig.h
firmware/include/mappings/: adc_usb.h  dac_usb.h  gpio_usb.h  spi_usb.h
firmware/include/peripherals/: adc.h  dac.h  gpio.h  pwm.h  spi.h
firmware/include/services/: adc_svc.h  base_svc.h  dac_svc.h  gpio_svc.h  i2c_svc.h  spi_svc.h
firmware/source/: adc.c  callbacks.c  dac.c  gpio.c  handlers.c  i2c.c  main.c  main_stk.c  pwm.c  spi.c
firmware/source/mappings/: adc_usb.c  dac_usb.c  gpio_usb.c  spi_usb.c
firmware/source/peripherals/: adc.c  dac.c  gpio.c  i2c.c  pwm.c  spi.c
firmware/source/services/: adc_svc.c  adc_usb.c  base_svc.c  dac_svc.c  gpio_svc.c  gpio_usb.c  i2c_svc.c  spi_svc.c
firmware/source/usb/: dac_usb.c
resources/: 20150611_usb_thing.csv
software/: CMakeLists.txt
software/include/: selftest.h
software/source/: main.c  selftest.c
